--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,14 +8,21 @@ pipeline {
         }
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t my-app:v1 .'
+                script {
+                    def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
+                    def imageName = "username/my-app:${commitHash}"
+                    sh "docker build -t ${imageName} ."
+                }
             }
         }
         stage('Push to Registry') {
             steps {
                 withDockerRegistry([credentialsId: 'docker-hub', url: 'https://index.docker.io/v1/']) {
-                    sh 'docker tag my-app:v1 username/my-app:v1'
-                    sh 'docker push username/my-app:v1'
+                    script {
+                        def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
+                        def imageName = "username/my-app:${commitHash}"
+                        sh "docker push ${imageName}"
+                    }
                 }
             }
         }
