--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,14 +3,14 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/YOUR_USERNAME/ENSF400_Project.git'
+                git 'https://github.com/Mohitkaila/ENSF400_Project.git'
             }
         }
         stage('Build Docker Image') {
             steps {
                 script {
                     def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                    def imageName = "username/my-app:${commitHash}"
+                    def imageName = "mohitkaila/my-app:${commitHash}"
                     sh "docker build -t ${imageName} ."
                 }
             }
@@ -20,7 +20,7 @@ pipeline {
                 withDockerRegistry([credentialsId: 'docker-hub', url: 'https://index.docker.io/v1/']) {
                     script {
                         def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                        def imageName = "username/my-app:${commitHash}"
+                        def imageName = "mohitkaila/my-app:${commitHash}"
                         sh "docker push ${imageName}"
                     }
                 }
