Added comments to Jenkinsfile for clarity and webhook triggering

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
 
         stage('Run Unit Tests') {
             steps {
+                // Installing necessary dependencies
                 sh 'pip install requests'
                 sh 'python3 test.py'
             }
@@ -36,4 +37,12 @@ pipeline {
             }
         }
     }
+
+    // To trigger the webhook manually, follow these steps:
+    // 1. Push changes to the feature branch.
+    // 2. Create a pull request to the main branch.
+    // 3. This action should trigger the webhook and Jenkins should start building.
+    // Check Jenkins logs for build details after the PR is created.
+
+    // If the webhook isn't triggered, check GitHub Settings > Webhooks for issues or test the webhook again.
 }
