--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,48 +1,37 @@
 pipeline {
     agent any
-    stages {
-        stage('Clone Repository') {
-            steps {
-                git 'https://github.com/Mohitkaila/ENSF400_Project.git'
-            }
-        }
 
+    stages {
         stage('Build Docker Image') {
             steps {
-                script {
-                    def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                    def imageName = "mohitkaila/my-app:${commitHash}"
-                    sh "docker build -t ${imageName} ."
-                }
+                echo 'Building Docker image...'
+                sh 'docker build -t ensf400-group7-app .'
             }
         }
 
         stage('Run Unit Tests') {
             steps {
-                // Installing necessary dependencies
-                sh 'pip install requests'
-                sh 'python3 test.py'
+                echo 'Running unit tests...'
+                sh 'python3 -m unittest test.py'
             }
         }
 
-        stage('Push to Registry') {
+        stage('SonarQube Analysis') {
+            environment {
+                SONAR_TOKEN = credentials('sonar-token')
+            }
             steps {
-                withDockerRegistry([credentialsId: 'docker-hub', url: 'https://index.docker.io/v1/']) {
-                    script {
-                        def commitHash = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                        def imageName = "mohitkaila/my-app:${commitHash}"
-                        sh "docker push ${imageName}"
-                    }
+                echo 'Running SonarQube analysis...'
+                withSonarQubeEnv('My SonarQube Server') {
+                    sh '''
+                        sonar-scanner \
+                          -Dsonar.projectKey=ensf400-group7 \
+                          -Dsonar.sources=src \
+                          -Dsonar.host.url=http://localhost:9000 \
+                          -Dsonar.login=$SONAR_TOKEN
+                    '''
                 }
             }
         }
     }
-
-    // To trigger the webhook manually, follow these steps:
-    // 1. Push changes to the feature branch.
-    // 2. Create a pull request to the main branch.
-    // 3. This action should trigger the webhook and Jenkins should start building.
-    // Check Jenkins logs for build details after the PR is created.
-
-    // If the webhook isn't triggered, check GitHub Settings > Webhooks for issues or test the webhook again.
 }
