--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,8 @@
-sonar.projectKey=ensf400
-sonar.projectName=ENSF400 Project
-sonar.sources=.
-sonar.python.version=3.9
+sonar.projectKey=ensf400-group7
+sonar.projectName=ENSF400 Group 7 App
+sonar.projectVersion=1.0
+sonar.sources=src
+sonar.language=py
+sonar.sourceEncoding=UTF-8
+sonar.host.url=http://localhost:9000
+sonar.login=sqa_1476ed1f269bb816943f6e0c1e1c211b43f49e61
