--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
-sonar.projectKey=ensf400-group7
-sonar.projectName=ENSF400 Group 7 App
+sonar.projectKey=ENSF400-Project-Group07
+sonar.projectName=ENSF400-Project-Group07
 sonar.projectVersion=1.0
-sonar.sources=src
+sonar.sources=.
 sonar.language=py
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://localhost:9000
-sonar.login=sqa_1476ed1f269bb816943f6e0c1e1c211b43f49e61
+sonar.host.url=http://sonarqube:9000
