--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
-sonar.projectKey=ENSF400-Project-Group07
-sonar.projectName=ENSF400-Project-Group07
+sonar.projectKey=ensf400-group7-app
+sonar.projectName=ENSF400 Group7 App
 sonar.projectVersion=1.0
-sonar.sources=.
-sonar.language=py
+sonar.sources=src
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://sonarqube:9000
